--- a/section/favorite.html
+++ b/section/favorite.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Raleway:wght@100;400&display=swap" rel="stylesheet">
 
     <!--estilo CSS-->
-    <link rel="shortcut icon" type="" href="./img/logo.png">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="shortcut icon" type="" href="../img/logo.png">
+    <link rel="stylesheet" href="../css/estilos.css">
     <!-- <link rel="stylesheet" href="./css/compilado.css">  -->
     <title>KaminariMovies</title>
 </head>
@@ -22,55 +22,33 @@
 
 <!--------NavBar------->
 <nav class="navbar navbar-expand-lg backmenu">
-      <div class="container-fluid">
-        <img src="/img/logo.png" height="150px" alt="logoheader">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <div class="container-fluid">
+        <img src="../img/logo.png" height="150px" alt="logoheader">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav align-items-center">
+            <ul class="navbar-nav align-items-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">MOVIES</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">MOVIES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./section/series.html">SERIES</a>
+                <a class="nav-link" href="../section/series.html">SERIES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./section/favorite.html">FAVORITE</a>
+                <a class="nav-link" href="../section/favorite.html">FAVORITE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./section/register.html">REGISTER</a>
+                <a class="nav-link" href="../section/register.html">REGISTER</a>
             </li>
-          </ul>
+            </ul>
         </div>
-      </div>
+    </div>
 </nav>
-<!------portada/carrusel----->
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./img/img1.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./img/img2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./img/img3.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 <!---Cont/Principal--->
 <main class="main">
 <section class="section">
-<h1>PELICULAS</h1>
+<h1>FAVORITE</h1>
 <hr>
   <div class="section__gallery">
     <div class="section__gallery-item">
@@ -203,13 +181,18 @@
 </section>
 </main>
 
+
+
+
+
+
 <!-------Footer-------->
 <footer class="footer">
     <div class="footer__redes">
-        <a class="footer__a" href="#"><img class="footer__item" src="./img/facebook_icon-icons.com_53612.svg" alt="logo de facebook"></a>
-        <a class="footer__a" href="#"><img class="footer__item" src="./img/instagram.svg" alt="logo de instagram"></a>
-        <a class="footer__a" href="#"><img class="footer__item" src="./img/twitter.png" alt="logo de twitter"></a>
-        <a class="footer__a" href="#"><img class="footer__item" src="./img/whatsapp.svg" alt="logo de whatsapp"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/facebook_icon-icons.com_53612.svg" alt="logo de facebook"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/instagram.svg" alt="logo de instagram"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/twitter.png" alt="logo de twitter"></a>
+        <a class="footer__a" href="#"><img class="footer__item" src="../img/whatsapp.svg" alt="logo de whatsapp"></a>
     </div>
     <div class="footer__Texto">
     <p class="footer__p">KaminariMovies 2022-2023 | Diseñado por JDAVILA - Todos los derechos reservados.</p>
@@ -221,5 +204,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
