--- a/section/register.html
+++ b/section/register.html
@@ -23,7 +23,7 @@
 <!--------NavBar------->
 <nav class="navbar navbar-expand-lg backmenu">
     <div class="container-fluid">
-        <img src="../img/logo.png" height="150px" alt="logoheader">
+        <a class="nav-link" href="../index.html"><img src="../img/logo.png" height="150px" alt="logoheader"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
