modifique rutas y añadi jpg

--- a/index.html
+++ b/index.html
@@ -18,32 +18,33 @@
     <!-- <link rel="stylesheet" href="./css/compilado.css">  -->
     <title>KaminariMovies</title>
 </head>
+
 <body class="body">
 
 <!--------NavBar------->
 <nav class="navbar navbar-expand-lg backmenu">
-      <div class="container-fluid">
-        <a class="nav-link" href="./index.html"><img src="/img/logo.png" height="150px" alt="logoheader"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <div class="container-fluid">
+        <a class="nav-link" href="./index.html"><img src="./img/logo.png" height="150px" alt="logoheader"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav align-items-center">
+        <ul class="navbar-nav align-items-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">MOVIES</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">MOVIES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./section/series.html">SERIES</a>
+                <a class="nav-link" href="./section/series.html">SERIES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./section/favorite.html">FAVORITE</a>
+                <a class="nav-link" href="./section/favorite.html">FAVORITE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./section/register.html">REGISTER</a>
+                <a class="nav-link" href="./section/register.html">REGISTER</a>
             </li>
-          </ul>
+        </ul>
         </div>
-      </div>
+    </div>
 </nav>
 <!------portada/carrusel----->
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -69,139 +70,154 @@
 </div>
 <!---Cont/Principal--->
 <main class="main">
-<section class="section">
-<h1>PELICULAS</h1>
-<hr>
-<div class="section__gallery">
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-
-</div>
-</section>
+    <section class="section">
+        <h1>PELICULAS</h1>
+        <hr>
 <!---seccion-eventos--->
-<section class="section">
+        <div class="section__gallery">
+            <div class="section__gallery-item">
+                <img src="./img/1.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/2.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/3.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/4.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/5.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/6.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/7.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/8.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/9.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/10.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/11.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/12.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/13.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/14.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/15.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/16.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/17.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/18.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/19.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/20.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/21.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/22.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/23.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/24.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/25.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/26.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/27.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/28.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/29.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
+            <div class="section__gallery-item">
+                <img src="./img/30.jpg" alt="" class="section__gallery-img">
+                <h2 class="section__gallery-title"></h2>
+            </div>
 
-
-</section>
+        </div>
+    </section>
 </main>
+<nav aria-label="...">
+    <ul class="pagination justify-content-center">
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+        </li>
+        <li class="page-item active">
+            <a class="page-link" href="#">1</a>
+        </li>
+        <li class="page-item" aria-current="page">
+            <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="#">3</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+        </li>
+    </ul>
+</nav>
 
 <!-------Footer-------->
 <footer class="footer">
