--- a/section/favorite.html
+++ b/section/favorite.html
@@ -18,6 +18,7 @@
     <!-- <link rel="stylesheet" href="./css/compilado.css">  -->
     <title>KaminariMovies</title>
 </head>
+
 <body class="body">
 
 <!--------NavBar------->
@@ -30,13 +31,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav align-items-center">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">MOVIES</a>
+                <a class="nav-link " aria-current="page" href="../index.html">MOVIES</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../section/series.html">SERIES</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../section/favorite.html">FAVORITE</a>
+                <a class="nav-link active" href="../section/favorite.html">FAVORITE</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../section/register.html">REGISTER</a>
@@ -50,128 +51,47 @@
 <section class="section">
 <h1>FAVORITE</h1>
 <hr>
-  <div class="section__gallery">
+<div class="section__gallery">
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/1.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/2.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/3.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/4.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/5.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/6.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/7.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/8.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/9.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
     <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
+        <img src="../img/10.jpg" alt="" class="section__gallery-img">
+        <h2 class="section__gallery-title"></h2>
     </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-    <div class="section__gallery-item">
-        <img src="./img/Shark.jpg" alt="ciudad de Paris" class="section__gallery-img">
-        <h2 class="section__gallery-title">Paris</h2>
-    </div>
-
 </div>
 </section>
 <!---seccion-eventos--->
