--- a/section/register.html
+++ b/section/register.html
@@ -18,6 +18,7 @@
     <!-- <link rel="stylesheet" href="./css/compilado.css">  -->
     <title>KaminariMovies</title>
 </head>
+
 <body class="body">
 
 <!--------NavBar------->
@@ -30,7 +31,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav align-items-center">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">MOVIES</a>
+                <a class="nav-link " aria-current="page" href="../index.html">MOVIES</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../section/series.html">SERIES</a>
@@ -39,7 +40,7 @@
                 <a class="nav-link" href="../section/favorite.html">FAVORITE</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../section/register.html">REGISTER</a>
+                <a class="nav-link active" href="../section/register.html">REGISTER</a>
             </li>
             </ul>
         </div>
